--- a/yazi.toml
+++ b/yazi.toml
@@ -1,6 +1,5 @@
 [manager]
 layout = [0, 4, 3]
-sort_by = "modified"
 sort_sensitive = true
 sort_reverse = true
 sort_dir_first = true
@@ -39,6 +38,8 @@ play = [
   { run = 'start "%1"', orphan = true, for = "windows" },
   { run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info", for = "unix" },
 ]
+
+
 
 [open]
 rules = [
@@ -373,7 +374,7 @@ cd_origin = "top-center"
 cd_offset = [0, 2, 50, 3]
 
 # create
-create_title = "Create:"
+create_title = ["Create:", "Create (dir):"]
 create_origin = "top-center"
 create_offset = [0, 2, 50, 3]
 
@@ -416,6 +417,13 @@ overwrite_offset = [0, 2, 50, 3]
 quit_title = "{n} task{s} running, sure to quit? (y/N)"
 quit_origin = "top-center"
 quit_offset = [0, 2, 50, 3]
+#
+# [[input.prepend_keymap]]
+# 	on   = "e"
+#   run = "shell --block --confirm 'hx .'"
+# 	desc = "open dir"
+#
+#
 
 [select]
 open_title = "Open with:"
