--- a/yazi.toml
+++ b/yazi.toml
@@ -1,50 +1,115 @@
+# A TOML linter such as https://taplo.tamasfe.dev/ can use this schema to validate your config.
+# If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
+"$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
+
 [mgr]
-layout = [0, 4, 3]
-sort_sensitive = true
-sort_reverse = true
+ratio          = [ 1, 4, 3 ]
+sort_by        = "alphabetical"
+sort_sensitive = false
+sort_reverse 	 = false
 sort_dir_first = true
-linemode = "mtime"
-show_hidden = true
-show_symlink = true
+sort_translit  = false
+linemode       = "none"
+show_hidden    = false
+show_symlink   = true
+scrolloff      = 5
+mouse_events   = [ "click", "scroll" ]
+title_format   = "Yazi: {cwd}"
 
 [preview]
-tab_size = 2
-max_width = 600
-max_height = 1000
-cache_dir = ""
-ueberzug_scale = 1
-ueberzug_offset = [0, 0, 0, 0]
+wrap            = "no"
+tab_size        = 2
+max_width       = 600
+max_height      = 900
+cache_dir       = ""
+image_delay     = 30
+image_filter    = "triangle"
+image_quality   = 75
+ueberzug_scale  = 1
+ueberzug_offset = [ 0, 0, 0, 0 ]
+
+[which]
+sort_by      	 = "none"
+sort_sensitive = false
+sort_reverse 	 = false
+sort_translit  = false
 
 [opener]
-edit = [{ run = '$EDITOR "$@"', block = true, for = "unix" }, { run = '''
+edit = [{ run = '$EDITOR "$@"', block = true, for = "unix" },
+{ run = '''
   "hx %*"
-''', block = true, for = "windows" }]
-open = [
-  { run = 'xdg-open "$@"', desc = "Open", for = "linux" },
-  { run = 'open "$@"', desc = "Open", for = "macos" },
-  { run = 'start "%1"', orphan = true, desc = "Open", for = "windows" },
+''', block = true, for = "windows" },
+	{ run = 'hx "$1"',             desc = "Open", for = "linux" },
+	{ run = 'hx "$1"',             desc = "Open", for = "android" },  
 ]
+
+open = [
+	{ run = 'xdg-open "$1"',                desc = "Open", for = "linux" },
+	{ run = 'open "$@"',                    desc = "Open", for = "macos" },
+	{ run = 'start "" "%1"', orphan = true, desc = "Open", for = "windows" },
+	{ run = 'termux-open "$1"',             desc = "Open", for = "android" },
+]
+
 reveal = [
-  { run = 'open -R "$1"', desc = "Reveal", for = "macos" },
-  { run = 'explorer /select,%1', orphan = true, desc = "Reveal", for = "windows" },
-  { run = '''exiftool "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show EXIF", for = "unix" },
+	{ run = 'xdg-open "$(dirname "$1")"',           desc = "Reveal", for = "linux" },
+	{ run = 'open -R "$1"',                         desc = "Reveal", for = "macos" },
+	{ run = 'explorer /select,"%1"', orphan = true, desc = "Reveal", for = "windows" },
+	{ run = 'termux-open "$(dirname "$1")"',        desc = "Reveal", for = "android" },
+	{ run = '''clear; exiftool "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show EXIF", for = "unix" },
+]
+
+extract = [
+	{ run = 'ya pub extract --list "$@"', desc = "Extract here", for = "unix" },
+	{ run = 'ya pub extract --list %*',   desc = "Extract here", for = "windows" },
 ]
 play = [
-  { run = 'mpv "$@"', orphan = true, for = "unix" },
-  { run = 'start "%1"', orphan = true, for = "windows" },
-  { run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info", for = "unix" },
+	{ run = 'xdg-open "$1"',                desc = "Play", for = "linux" },
+	{ run = 'open "$@"',                    desc = "Play", for = "macos" },
+	{ run = 'start "" "%1"', orphan = true, desc = "Play", for = "windows" },
+	{ run = 'termux-open "$1"',             desc = "Play", for = "android" },
+	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
+	{ run = 'mediainfo "%1" & pause', block = true, desc = "Show media info", for = "windows" },
 ]
 
+[confirm]
+# trash
+trash_title 	= "Trash {n} selected file{s}?"
+trash_origin	= "center"
+trash_offset	= [ 0, 0, 70, 20 ]
 
+# delete
+delete_title 	= "Permanently delete {n} selected file{s}?"
+delete_origin	= "center"
+delete_offset	= [ 0, 0, 70, 20 ]
+
+# overwrite
+overwrite_title  = "Overwrite file?"
+overwrite_content   = "Will overwrite the following file:"
+overwrite_origin = "center"
+overwrite_offset = [ 0, 0, 50, 15 ]
+
+# quit
+quit_title  = "Quit?"
+quit_content   = "The following tasks are still running, are you sure you want to quit?"
+quit_origin = "center"
+quit_offset = [ 0, 0, 50, 15 ]
+
+[pick]
+open_title  = "Open with:"
+open_origin = "hovered"
+open_offset = [ 0, 1, 50, 7 ]
 
 [open]
 rules = [
-  { name = "*/", use = [
-    "edit",
-    "open",
-    "reveal",
-  ] },
 
+	# Archive
+	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [ "extract", "reveal" ] },
+	# JSON
+	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
+	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
+	# Empty file
+	{ mime = "inode/empty", use = [ "edit", "reveal" ] },
+  { name = "*/", use = [ "edit", "open", "reveal", ] },
   { mime = "text/*", use = [
     "edit",
     "reveal",
@@ -61,48 +126,7 @@ rules = [
     "play",
     "reveal",
   ] },
-  { mime = "inode/x-empty", use = [
-    "edit",
-    "reveal",
-  ] },
 
-  { mime = "application/json", use = [
-    "edit",
-    "reveal",
-  ] },
-  { mime = "*/javascript", use = [
-    "edit",
-    "reveal",
-  ] },
-
-  { mime = "application/zip", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/gzip", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/x-tar", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/x-bzip", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/x-bzip2", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/x-7z-compressed", use = [
-    "extract",
-    "reveal",
-  ] },
-  { mime = "application/x-rar", use = [
-    "extract",
-    "reveal",
-  ] },
   # PowerShell Scripts
   { mime = "text/x-powershell", use = [
     "edit",
